# httpsuite

./: .buildinfo  .travis.yml  README.md  contents.html  dev-requirements.txt  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs-publish.yml
_modules/: index.html
_modules/httpsuite/: core.html  helpers.html  http.html
_sources/misc/: Versions.rst.txt
docs/source/: conf.py  contents.rst
docs/source/misc/: Glossary.rst  License.rst  Versions.rst
docs/source/module/: RFC.rst  http.rst  interface.rst
docs/source/writeups/: Quickstart.rst
examples/: example_microservice.py  example_request.py  example_response.py
httpsuite/: RFC.py  __init__.py  core.py  helpers.py  http.py  interface.py
misc/: License.html  Versions.html
module/: RFC.html  core.html  helpers.html
tests/: test_message.py  test_request.py  test_response.py
tests/interfaces/: test_headers.py
writeups/: Advance Use.html  Basic Use.html  Quickstart.html
