[metadata]
name = httpsuite
author = Felipe Faria
author-email = felipefaria@hey.com
summary = Collection of tools to parse, manipulate, and compile raw HTTP messages.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5
home-page = https://github.com/shades-sh/httpsuite
project_urls =
    Bug Tracker = https://github.com/shades-sh/httpsuite/issues
    Documentation = https://shades-sh.github.io/httpsuite/
    Source Code = https://github.com/shades-sh/httpsuite/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    httpsuite
    http
    parser
    validator
 
[extras]
dev =
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx-copybutton
    sphinx-autobuild
    m2r2
    furo
validator = 
    httpsuite-validator

[files]
packages =
    httpsuite
